// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot with icon 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    style={[]}
  >
    <View
      style={[]}
    >
      <View
        style={[]}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight="24"
          bbWidth="24"
          fill="none"
          focusable={false}
          height="24"
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          testID="mock-icon"
          vbHeight={24}
          vbWidth={24}
          width="24"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
          >
            <RNSVGPath
              d="M18 6 6 18"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGPath
              d="m6 6 12 12"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <TextInput
        defaultValue="test"
        focusVisibleStyle={{}}
        focusable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        placeholder="Enter text"
        placeholderTextColor="#9ca3af"
        style={
          {
            "backgroundColor": "#f9fafb",
            "borderBottomColor": "#d1d5db",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 1,
            "borderLeftColor": "#d1d5db",
            "borderLeftWidth": 1,
            "borderRightColor": "#d1d5db",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#d1d5db",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 1,
            "color": "#374151",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": 45,
            "minWidth": 0,
            "paddingBottom": 12,
            "paddingLeft": 54,
            "paddingRight": 16,
            "paddingTop": 12,
            "position": "relative",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`Input matches snapshot without icon 1`] = `
[
  <View
    aria-label="Notifications (F8)"
    pointerEvents="box-none"
    role="region"
    style={
      {
        "bottom": 0,
        "flexDirection": "column",
        "left": 0,
        "maxWidth": "100%",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 100000,
      }
    }
    tabIndex={-1}
  >
    <View
      focusable={false}
      pointerEvents="box-none"
      style={
        {
          "flexDirection": "column",
          "maxWidth": "100%",
          "position": "absolute",
        }
      }
    />
  </View>,
  <View
    style={[]}
  >
    <View
      style={[]}
    >
      <TextInput
        defaultValue="test"
        focusVisibleStyle={{}}
        focusable={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onEndEditing={[Function]}
        onFocus={[Function]}
        placeholder="Enter text"
        placeholderTextColor="#9ca3af"
        style={
          {
            "backgroundColor": "#f9fafb",
            "borderBottomColor": "#d1d5db",
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderBottomWidth": 1,
            "borderLeftColor": "#d1d5db",
            "borderLeftWidth": 1,
            "borderRightColor": "#d1d5db",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "borderTopColor": "#d1d5db",
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "borderTopWidth": 1,
            "color": "#374151",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": 45,
            "minWidth": 0,
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
      />
    </View>
  </View>,
]
`;
